# kl2_viewer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: backend.h  gms.h  gs.h  kit.h  ps2.h  romfs.h  sfx.h  take.h  types.h  vu0.h
res/: bg_shader.fs  bg_shader.vs  sfx_shader.fs  sfx_shader.vs  sfx_spec_shader.fs  sfx_spec_shader.vs
src/: gms.c  gs.c  main.c  romfs.cpp  vu0.c
src/backend/: opengl_common.c  opengl_egl.c  opengl_glfw.c
src/take/: camera.c  camera.h  mimesys.c  mimesys.h  motip.c  motip.h  motsys.c  motsys.h  motsys2.c  motsys2.h  object.c  object.h  sfxbios.c  sfxbios.h
